<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="GVL_Variables_Devices" Id="{7591d7e0-1d12-41a7-a88a-d87b7495c6e4}">
    <Declaration><![CDATA[VAR_GLOBAL
//VGC
vgcMXT_VGC_04 : ST_VGC;
vgcDVD_VGC_01 : ST_VGC;
vgcDIA_VGC_01 : ST_VGC;
vgcDIA_VGC_02 : ST_VGC;
vgcDG1_VGC_01 : ST_VGC;
vgcDG1_VGC_02 : ST_VGC;
//vgcDG2_VGC_01 : ST_VGC;
//VG

vgMFX_GPI_D1 : ST_VG; // dummy Pirani Gauge

vgMXT_GCC_06 : ST_VG;
vgDVD_GCC_02 : ST_VG;
vgDVD_GCC_04 : ST_VG;
vgMON_GCC_01 : ST_VG;
vgDIA_GCC_01 : ST_VG;
//vgDownstream : ST_VG;
vgSB2_GCC_01 : ST_VG;
vgDG1_GCC_01 : ST_VG;
vgDG2_GCC_01 : ST_VG;


END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>